added semantic and input elements

--- a/develop/index.html
+++ b/develop/index.html
@@ -5,9 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-	<script src="index.js"></script>
+    <!-- navigation bar -->
+	<header>
+        <nav>
+            <ul>
+                <li>Github</li>
+                <li>Portfolio</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <!-- title, content and info -->
+    <main>
+        <section>
+            <h1>My New Website</h1>
+            <h2>Coming Soon</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        </section>
+    <!-- contact form -->
+        <section>
+            <h3>Contact Me</h3>
+            <form>
+                <label>Name:</label>
+                <input type="text"><br>
+                <label>Email:</label>
+                <input type="text"><br>
+                <button>Send</button>
+            </form>
+        </section>
+    </main>
+    <!-- footer stuff -->
+    <footer>
+        <p>2022 My New Website Production</p>
+    </footer>
   </body>
 </html>
