added class, color, and form

--- a/develop/index.html
+++ b/develop/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Contact Form</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!-- navigation bar -->
 	<header>
-        <nav>
+        <nav class="bar">
             <ul>
                 <li>Github</li>
                 <li>Portfolio</li>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <!-- title, content and info -->
+    <!-- title, image, and contact -->
     <main>
         <section>
             <h1>My New Website</h1>
@@ -29,7 +29,7 @@
         <section>
             <h3>Contact Me</h3>
             <form>
-                <label>Name:</label>
+                <label>Name:&nbsp</label>
                 <input type="text"><br>
                 <label>Email:</label>
                 <input type="text"><br>
@@ -38,7 +38,7 @@
         </section>
     </main>
     <!-- footer stuff -->
-    <footer>
+    <footer class="bar">
         <p>2022 My New Website Production</p>
     </footer>
   </body>
