added fixed nav, alt att, and butt

--- a/develop/index.html
+++ b/develop/index.html
@@ -20,20 +20,22 @@
     </header>
     <!-- title, image, and contact -->
     <main>
-        <section>
-            <h1>My New Website</h1>
-            <h2>Coming Soon</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+        <section id="section-1">
+            <h1>My New Website</h1><br/>
+            <img src="https://cdn.pixabay.com/photo/2020/05/10/06/26/coming-soon-5152487_1280.png" alt="Coming Soon">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
     <!-- contact form -->
-        <section>
+        <section id="section-2">
             <h3>Contact Me</h3>
             <form>
-                <label>Name:&nbsp</label>
-                <input type="text"><br>
-                <label>Email:</label>
-                <input type="text"><br>
-                <button>Send</button>
+                <div>
+                    <label>Name:&nbsp</label>
+                    <input type="text"><br>
+                    <label>Email:</label>
+                    <input type="text"><br>
+                    <button>Send</button>
+                </div>
             </form>
         </section>
     </main>
