--- a/develop/index.html
+++ b/develop/index.html
@@ -11,11 +11,9 @@
     <!-- navigation bar -->
 	<header>
         <nav class="bar">
-            <ul>
-                <li>Github</li>
-                <li>Portfolio</li>
-                <li>Contact</li>
-            </ul>
+            <a href="#">Github</a>
+            <a href="#">Portfolio</a>
+            <a href="#contact-me">Contact</a>
         </nav>
     </header>
     <!-- title, image, and contact -->
@@ -27,21 +25,21 @@
         </section>
     <!-- contact form -->
         <section id="section-2">
-            <h3>Contact Me</h3>
+            <h3 id="contact-me">Contact Me</h3>
             <form>
                 <div>
                     <label>Name:&nbsp</label>
-                    <input type="text"><br>
+                    <input type="text" placeholder="'John Wick'" alt="Enter your name"><br><br>
                     <label>Email:</label>
-                    <input type="text"><br>
-                    <button>Send</button>
+                    <input type="text" placeholder="'agentsmith@matrix.com'" alt="Enter your email"><br>
+                    <button>Click Here to Send</button>
                 </div>
             </form>
         </section>
     </main>
     <!-- footer stuff -->
     <footer class="bar">
-        <p>2022 My New Website Production</p>
+        <p>&copy2022 My New Website Production</p>
     </footer>
   </body>
 </html>
